--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,13 @@
 
 url: http://mariostallone.com
 title: Mario's Blog
-subtitle: A budding Tech Enthusiast's encounters with life.
+subtitle:
 author: Mario Stallone
 simple_search: http://google.com/search
-description:
+description: A budding Tech Enthusiast's encounters with life.
+gravatar_email: mariostallone@gmail.com
+site.email: mariostallone@gmail.com
+email_id: mariostallone@gmail.com
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -17,9 +20,9 @@ date_format: "ordinal"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
 subscribe_rss: /atom.xml
-subscribe_email:
+subscribe_email: mariostallone@gmail.com
 # RSS feeds can list your email address if you like
-email:
+email: mariostallone@gmail.com
 
 # ----------------------- #
 #    Jekyll & Plugins     #
