New Look and a new post on git added

--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ subtitle:
 author: Mario Stallone
 simple_search: http://google.com/search
 description: A budding Tech Enthusiast's encounters with life.
-gravatar_email: mariostallone@gmail.com
-site.email: mariostallone@gmail.com
-email_id: mariostallone@gmail.com
+gravatar_email:
+site.email: 
+email_id: 
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -20,9 +20,9 @@ date_format: "ordinal"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
 subscribe_rss: /atom.xml
-subscribe_email: mariostallone@gmail.com
+subscribe_email: 
 # RSS feeds can list your email address if you like
-email: mariostallone@gmail.com
+email: 
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -42,7 +42,7 @@ rdiscount:
     - autolink
     - footnotes
     - smart
-pygments: false # default python pygments have been replaced by pygments.rb
+pygments: true # default python pygments have been replaced by pygments.rb
 
 paginate: 10          # Posts per page on the blog index
 pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
@@ -53,7 +53,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [asides/header.html, asides/nav.html, asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -67,7 +67,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 
 # Github repositories
 github_user: mariostallone
-github_repo_count: 0
+github_repo_count: 4
 github_show_profile_link: true
 github_skip_forks: true
 
@@ -94,10 +94,10 @@ delicious_count: 3
 
 # Disqus Comments
 disqus_short_name:
-disqus_show_comment_count: false
+disqus_show_comment_count: true
 
 # Google Analytics
 google_analytics_tracking_id: UA-28134817-1
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
